overflow bugfix

--- a/scss/retina.scss
+++ b/scss/retina.scss
@@ -51,7 +51,6 @@ $MQ_PREFIX_TYPES                : -webkit-, -moz-, -o-, -ms-, '' !default;
 html
 {
     //layout
-    overflow: hidden;
     display:   block;
     width:      100%;
     height:     100%;
@@ -78,7 +77,6 @@ html
 #wrapper
 {
     //layout
-    overflow: hidden;
     width:      100%;
     height:     100%;
 }
