--- a/scss/sample.scss
+++ b/scss/sample.scss
@@ -28,7 +28,6 @@
 html
 {
     //layout
-    overflow: hidden;
     display:   block;
     width:      100%;
     height:     100%;
@@ -55,7 +54,6 @@ html
 #wrapper
 {
     //layout
-    overflow: hidden;
     width:      100%;
     height:     100%;
 }
